--- a/angular.json
+++ b/angular.json
@@ -47,6 +47,7 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
+              "src/avatar.png",
               "src/assets"
             ],
             "styles": [
@@ -146,6 +147,10 @@
               "devServerTarget": "my-portfolio-pages:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
