--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "api": "json-server src/app/shared/api/db.json --routes src/app/shared/api/routes.json --no-cars=true",
-    "deploy:gh": "ng build --prod --base-href='https://foridulislam21.github.io/' && ngh --dir dist/my-portfolio-pages --no-silent"
+    "api": "json-server src/app/shared/api/db.json --routes src/app/shared/api/routes.json --no-cors=true",
+    "deploy:gh": "ng build --prod --base-href=https://foridulislam21.github.io/ && ngh --dir dist/my-portfolio-pages --no-silent"
   },
   "private": true,
   "dependencies": {
@@ -18,6 +18,7 @@
     "@angular/common": "~10.0.11",
     "@angular/compiler": "~10.0.11",
     "@angular/core": "~10.0.11",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~10.0.11",
     "@angular/material": "^10.2.7",
     "@angular/platform-browser": "~10.0.11",
@@ -29,7 +30,8 @@
     "json-server": "^0.16.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "firebase": "^7.0 || ^8.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.1100.6",
@@ -49,6 +51,12 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "@angular-devkit/architect": ">= 0.900 < 0.1200",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3"
   }
 }
