--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.11",
-    "@angular/cdk": "^10.2.7",
-    "@angular/common": "~10.0.11",
-    "@angular/compiler": "~10.0.11",
-    "@angular/core": "~10.0.11",
+    "@angular/animations": "11.1.1",
+    "@angular/cdk": "^11.1.1",
+    "@angular/common": "11.1.1",
+    "@angular/compiler": "11.1.1",
+    "@angular/core": "^11.1.1",
     "@angular/fire": "^6.1.4",
-    "@angular/forms": "~10.0.11",
-    "@angular/material": "^10.2.7",
-    "@angular/platform-browser": "~10.0.11",
-    "@angular/platform-browser-dynamic": "~10.0.11",
-    "@angular/router": "~10.0.11",
+    "@angular/forms": "11.1.1",
+    "@angular/material": "^11.1.1",
+    "@angular/platform-browser": "11.1.1",
+    "@angular/platform-browser-dynamic": "11.1.1",
+    "@angular/router": "11.1.1",
     "bootstrap": "^5.0.0-beta1",
     "bootstrap-icons": "^1.3.0",
     "bootswatch": "^4.5.3",
     "firebase": "^7.0 || ^8.0",
     "json-server": "^0.16.3",
     "nodemailer": "^6.4.17",
-    "rxjs": "~6.5.5",
+    "rxjs": "6.6.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
@@ -37,7 +37,7 @@
     "@angular-devkit/architect": ">= 0.900 < 0.1200",
     "@angular-devkit/build-angular": "^0.1100.6",
     "@angular/cli": "^11.1.1",
-    "@angular/compiler-cli": "~10.0.11",
+    "@angular/compiler-cli": "11.1.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
@@ -57,6 +57,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "4.0.2"
   }
 }
