--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "bootstrap": "^5.0.0-beta1",
     "bootstrap-icons": "^1.3.0",
     "bootswatch": "^4.5.3",
-    "firebase": "^7.0 || ^8.0",
+    "firebase": "^8.2.5",
     "json-server": "^0.16.3",
     "nodemailer": "^6.4.17",
     "rxjs": "6.6.3",
