--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "angular.ng-template"
+        "angular.ng-template",
+        "johnpapa.angular-essentials"
     ]
 }
